prover-ray/zkcdriver/testdata/synced/invalid/fail_01.zkc
//error:9:33-36:too many arguments
pub input data(address:u16) -> (byte:u32)

// prove that two numbers add up to a third.
fn main() {
  var lhs:u32 = data[0]
  var rhs:u32 = data[1]
  //
  fail "hello world %d\n", lhs, rhs
}
